@@ -8,11 +8,10 @@ import org.junit.jupiter.params.provider.ValueSource;
 import edu.hm.hafner.util.PathUtil;
 
 import java.io.File;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.file.Path;
+import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -86,7 +85,7 @@ class FileNameResolverTest {
         assertThat(report.get(0)).hasFileName(RELATIVE_FILE).hasPath(RESOURCE_FOLDER_STRING);
 
         assertThat(report.getInfoMessages()).hasSize(1);
-        assertThat(report.getInfoMessages().get(0)).as("Files: "
+        assertThat(report.getInfoMessages().getFirst()).as("Files: "
                 + report.stream().map(Issue::getFileName).collect(Collectors.joining(", ")))
                 .contains("1 found", "0 not found");
         assertThat(report.getErrorMessages()).isEmpty();
@@ -107,7 +106,7 @@ class FileNameResolverTest {
         assertThat(report.get(0)).hasFileName("not here").hasPath(UNDEFINED);
 
         assertThat(report.getInfoMessages()).hasSize(1);
-        assertThat(report.getInfoMessages().get(0)).as("Files: "
+        assertThat(report.getInfoMessages().getFirst()).as("Files: "
                 + report.stream().map(Issue::getFileName).collect(Collectors.joining(", ")))
                 .contains("0 found", "1 not found");
         assertThat(report.getErrorMessages()).isEmpty();
@@ -156,7 +155,7 @@ class FileNameResolverTest {
                 .hasFileName("/not-existing-parent.txt");
 
         assertThat(report.getInfoMessages()).hasSize(1);
-        assertThat(report.getInfoMessages().get(0)).as("Files: "
+        assertThat(report.getInfoMessages().getFirst()).as("Files: "
                 + report.stream().map(Issue::getFileName).collect(Collectors.joining(", ")))
                 .contains("3 found", "2 not found");
         assertThat(report.getErrorMessages()).isEmpty();
@@ -197,7 +196,7 @@ class FileNameResolverTest {
         assertThat(report.get(0).getFileName()).as(description).isEqualTo(RELATIVE_FILE);
         assertThat(report.getErrorMessages()).as(description).isEmpty();
         assertThat(report.getInfoMessages()).as(description).hasSize(1);
-        assertThat(report.getInfoMessages().get(0)).as(description).contains("1 found");
+        assertThat(report.getInfoMessages().getFirst()).as(description).contains("1 found");
     }
 
     @Test
@@ -220,13 +219,13 @@ class FileNameResolverTest {
             assertThat(report.get(0).getFileName()).isEqualTo("child.txt");
             assertThat(report.getErrorMessages()).isEmpty();
             assertThat(report.getInfoMessages()).hasSize(1);
-            assertThat(report.getInfoMessages().get(0)).contains("1 found");
+            assertThat(report.getInfoMessages().getFirst()).contains("1 found");
         }
     }
 
     private void assertThatOneFileIsUnresolved(final Report report) {
         assertThat(report.getInfoMessages()).hasSize(1);
-        assertThat(report.getInfoMessages().get(0)).contains("1 not found");
+        assertThat(report.getInfoMessages().getFirst()).contains("1 not found");
     }
 
     @Test
@@ -242,8 +241,8 @@ class FileNameResolverTest {
 
             assertThat(report).hasSize(1);
             assertThat(report.get(0)).hasFileName(RELATIVE_FILE).hasPath(RESOURCE_FOLDER_STRING);
-            assertThat(report.getInfoMessages()).hasSize(2); 
-            assertThat(report.getInfoMessages().get(0)).contains("remapping paths from");
+            assertThat(report.getInfoMessages()).hasSize(2);
+            assertThat(report.getInfoMessages().getFirst()).contains("remapping paths from");
             assertThat(report.getInfoMessages().get(1)).contains("1 found");
         }
     }
@@ -259,8 +258,8 @@ class FileNameResolverTest {
 
             assertThat(report).hasSize(1);
             assertThat(report.get(0)).hasFileName(RELATIVE_FILE).hasPath(RESOURCE_FOLDER_STRING);
-            assertThat(report.getInfoMessages()).hasSize(1); 
-            assertThat(report.getInfoMessages().get(0)).contains("1 found");
+            assertThat(report.getInfoMessages()).hasSize(1);
+            assertThat(report.getInfoMessages().getFirst()).contains("1 found");
         }
     }
 
@@ -276,7 +275,7 @@ class FileNameResolverTest {
             assertThat(report).hasSize(1);
             assertThat(report.get(0)).hasFileName(RELATIVE_FILE).hasPath(RESOURCE_FOLDER_STRING);
             assertThat(report.getInfoMessages()).hasSize(1); // only resolving, no remapping
-            assertThat(report.getInfoMessages().get(0)).contains("1 found");
+            assertThat(report.getInfoMessages().getFirst()).contains("1 found");
         }
     }
 
@@ -298,8 +297,8 @@ class FileNameResolverTest {
             assertThat(report.get(1)).hasFileName(otherPath + "/other.txt");
             assertThat(report.get(2)).hasFileName(RELATIVE_FILE).hasPath(RESOURCE_FOLDER_STRING);
 
-            assertThat(report.getInfoMessages()).hasSize(2); 
-            assertThat(report.getInfoMessages().get(0)).contains("remapping paths");
+            assertThat(report.getInfoMessages()).hasSize(2);
+            assertThat(report.getInfoMessages().getFirst()).contains("remapping paths");
         }
     }
 
@@ -334,10 +333,10 @@ class FileNameResolverTest {
     private static URI getResourceFolder() {
         try {
             var resource = FileNameResolverTest.class.getResource(RELATIVE_FILE);
-            var fileName = resource.toExternalForm();
-            return new URL(fileName.replace(RELATIVE_FILE, "")).toURI();
+            var fileName = Objects.requireNonNull(resource).toExternalForm();
+            return new URI(fileName.replace(RELATIVE_FILE, ""));
         }
-        catch (MalformedURLException | URISyntaxException e) {
+        catch (URISyntaxException e) {
             throw new AssertionError(e);
         }
     }
